# book-store

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py  wsgi.py
order/: apps.py  urls.py  views.py
order/migrations/: 0001_initial.py
order/models/: __init__.py  order.py
order/serializers/: order_serializer.py
order/tests/: test_order_serializer.py
order/tests/test_serializer/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewsets.py
order/viewsets/: order_viewset.py
product/: apps.py  views.py
product/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options.py
product/models/: __init__.py  category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/tests/test_serializer/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: __init__.py  category_viewset.py  product_viewset.py
